only have invisible border top fixed nav fix for all but the first body content sections

--- a/wp-content/themes/ushipnetwork/css/style.css
+++ b/wp-content/themes/ushipnetwork/css/style.css
@@ -532,7 +532,7 @@ em {
 .sectionNavy {
   background-color: #1C2431; }
 
-.bodyContent section {
+.bodyContent section:not(:first-child) {
   border-top: 80px solid transparent;
   margin-top: -80px;
   background-clip: padding-box; }
