--- a/wp-content/themes/ushipnetwork/sass/_partials/_base.scss
+++ b/wp-content/themes/ushipnetwork/sass/_partials/_base.scss
@@ -87,7 +87,7 @@ em {
   background-color: $navy;
 }
 
-.bodyContent section {
+.bodyContent section:not(:first-child) {
   border-top: 80px solid transparent;
   margin-top: -80px;
   background-clip: padding-box;
